--- a/grp7_cfg/DJAF1/djaf1_ospf.conf
+++ b/grp7_cfg/DJAF1/djaf1_ospf.conf
@@ -10,18 +10,18 @@ debug ospf6 neighbor state
 !
 interface DJAF1-eth0
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface DJAF1-eth1
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 router ospf6
     ospf6 router-id 255.1.2.1
-    interface eth0 area 0.0.0.0
-    interface eth1 area 0.0.0.0
+    interface DJAF1-eth0 area 0.0.0.0
+    interface DJAF1-eth1 area 0.0.0.0
 !
