--- a/grp7_cfg/SAMIR0/samir0_ospf.conf
+++ b/grp7_cfg/SAMIR0/samir0_ospf.conf
@@ -10,39 +10,39 @@ debug ospf6 neighbor state
 !
 interface SAMIR0-eth0
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR0-eth1
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR0-eth2
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR0-eth3
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR0-eth4
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 router ospf6
-    ospf6 router-id 255.1.1.0
-    interface eth0 area 0.0.0.0
-    interface eth1 area 0.0.0.0
-    interface eth2 area 0.0.0.0
-    interface eth3 area 0.0.0.0
-    interface eth4 area 0.0.0.0
+    ospf6 router-id 154.2.4.1
+    interface SAMIR0-eth0 area 0.0.0.0
+    interface SAMIR0-eth1 area 0.0.0.0
+    interface SAMIR0-eth2 area 0.0.0.0
+    interface SAMIR0-eth3 area 0.0.0.0
+    interface SAMIR0-eth4 area 0.0.0.0
 !
