--- a/grp7_cfg/SAMIR3/samir3_ospf.conf
+++ b/grp7_cfg/SAMIR3/samir3_ospf.conf
@@ -10,25 +10,25 @@ debug ospf6 neighbor state
 !
 interface SAMIR3-eth0
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR3-eth1
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 interface SAMIR3-eth2
     ipv6 ospf6 cost 5
-    ipv6 ospf6 hello-interval 40
+    ipv6 ospf6 hello-interval 10
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
 router ospf6
     ospf6 router-id 255.1.1.3
-    interface eth0 area 0.0.0.0
-    interface eth1 area 0.0.0.0
-    interface eth2 area 0.0.0.0
+    interface SAMIR3-eth0 area 0.0.0.0
+    interface SAMIR3-eth1 area 0.0.0.0
+    interface SAMIR3-eth2 area 0.0.0.0
 !
