--- a/grp7_cfg/SAMIR0/samir0_ospf.conf
+++ b/grp7_cfg/SAMIR0/samir0_ospf.conf
@@ -38,6 +38,12 @@ interface SAMIR0-eth4
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
+interface lo
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 instance-id 0
+	
 router ospf6
     ospf6 router-id 154.2.4.1
     interface SAMIR0-eth0 area 0.0.0.0
@@ -45,4 +51,5 @@ router ospf6
     interface SAMIR0-eth2 area 0.0.0.0
     interface SAMIR0-eth3 area 0.0.0.0
     interface SAMIR0-eth4 area 0.0.0.0
+    interface lo area 0.0.0.0
 !
