--- a/grp7_cfg/SAMIR2/samir2_ospf.conf
+++ b/grp7_cfg/SAMIR2/samir2_ospf.conf
@@ -32,10 +32,17 @@ interface SAMIR2-eth3
     ipv6 ospf6 dead-interval 40
     ipv6 ospf6 instance-id 0
 !
+interface lo
+    ipv6 ospf6 cost 5
+    ipv6 ospf6 hello-interval 10
+    ipv6 ospf6 dead-interval 40
+    ipv6 ospf6 instance-id 0
+
 router ospf6
     ospf6 router-id 255.1.1.2
     interface SAMIR2-eth0 area 0.0.0.0
     interface SAMIR2-eth1 area 0.0.0.0
     interface SAMIR2-eth2 area 0.0.0.0
     interface SAMIR2-eth3 area 0.0.0.0
+    interface lo area 0.0.0.0
 !
