OSPF : ok, iBGP : ok, eBGP (thomas, google, un autre grp) : ok, RR : ok)

--- a/grp7_cfg/DJAF0/djaf0_zebra.conf
+++ b/grp7_cfg/DJAF0/djaf0_zebra.conf
@@ -12,12 +12,8 @@ interface lo
  description loopback.
 !
 interface DJAF0-eth0
- description Link to PIERROT1
+ description Link to SAMIR2
 !
 interface DJAF0-eth1
- description Link to DJAF1
-!
-
-interface DJAF0-eth2
  description Link to DJAF2
 !
