--- a/grp7_cfg/DJAF1/djaf1_zebra.conf
+++ b/grp7_cfg/DJAF1/djaf1_zebra.conf
@@ -13,7 +13,7 @@ interface lo
  description loopback.
 !
 interface DJAF1-eth0
- description Link to DJAF0
+ description Link to SAMIR2
 !
 interface DJAF1-eth1
  description Link to DJAF2
