--- a/grp7_cfg/PIERROT0/pierrot0_zebra.conf
+++ b/grp7_cfg/PIERROT0/pierrot0_zebra.conf
@@ -12,7 +12,7 @@ interface lo
  description loopback.
 !
 interface PIERROT0-eth0
- description Link to PIERROT1
+ description Link to SAMIR1
 !
 interface PIERROT0-eth1
  description Link to PIERROT2
