--- a/grp7_cfg/PIERROT1/pierrot1_zebra.conf
+++ b/grp7_cfg/PIERROT1/pierrot1_zebra.conf
@@ -14,13 +14,9 @@ interface lo
  description loopback.
 !
 interface PIERROT1-eth0
- description Link to PIERROT0
+ description Link to SAMIR1
 !
 interface PIERROT1-eth1
  description Link to PIERROT2
 !
-interface PIERROT1-eth2
- description Link to DJAF0
-!
-
 
