Ajout des liens eBGP avec les autres groupes

--- a/grp7_cfg/DJAF0/djaf0_bgp.conf
+++ b/grp7_cfg/DJAF0/djaf0_bgp.conf
@@ -13,11 +13,22 @@ router bgp 65007
  neighbor fde4:7:deef:beef::a remote-as 65007
  neighbor fde4:7:deef:beef::a update-source lo
 !
+ neighbor fde4::5:face remote-as 65005
+ neighbor fde4::5:face update-source grp5
+!
+ neighbor fde4:8:07::cafe remote-as 65008
+ neighbor fde4:8:07::cafe update-source grp8
+!
  address-family ipv6 unicast
 !
+  neighbor fde4:7:deef:beef::3 next-hop-self
+  neighbor fde4:7:deef:beef::4 next-hop-self
+  neighbor fde4:7:deef:beef::a next-hop-self
   neighbor fde4:7:deef:beef::3 activate
   neighbor fde4:7:deef:beef::4 activate
   neighbor fde4:7:deef:beef::a activate
+  neighbor fde4::5:face activate
+  neighbor fde4:8:07::cafe activate
   neighbor fde4:7:deef:beef::a route-reflector-client
  exit-address-family
 
