--- a/grp7_cfg/DJAF1/djaf1_bgp.conf
+++ b/grp7_cfg/DJAF1/djaf1_bgp.conf
@@ -13,11 +13,18 @@ router bgp 65007
  neighbor fde4:7:deef:beef::a remote-as 65007
  neighbor fde4:7:deef:beef::a update-source lo
 !
+ neighbor fde4:3::7:cafe remote-as 65003
+ neighbor fde4:3::7:cafe update-source grp3
+!
  address-family ipv6 unicast
 !
+  neighbor fde4:7:deef:beef::3 next-hop-self
+  neighbor fde4:7:deef:beef::4 next-hop-self
+  neighbor fde4:7:deef:beef::a next-hop-self
   neighbor fde4:7:deef:beef::3 activate
   neighbor fde4:7:deef:beef::4 activate
   neighbor fde4:7:deef:beef::a activate
+  neighbor fde4:3::7:cafe activate
   neighbor fde4:7:deef:beef::a route-reflector-client
  exit-address-family
 
