J'avais oublié de push la dernière version de mon code, il n'y a que des minis changements de toute manière

--- a/grp7_cfg/DJAF0/djaf0_bgp.conf
+++ b/grp7_cfg/DJAF0/djaf0_bgp.conf
@@ -6,18 +6,22 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::3 remote-as 65007
  neighbor fde4:7:deef:beef::3 update-source lo
+ neighbor fde4:7:deef:beef::3 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::4 remote-as 65007
  neighbor fde4:7:deef:beef::4 update-source lo
+ neighbor fde4:7:deef:beef::4 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::a remote-as 65007
  neighbor fde4:7:deef:beef::a update-source lo
+ neighbor fde4:7:deef:beef::a password ABCDEF12345
 !
  neighbor fde4::5:face remote-as 65005
  neighbor fde4::5:face update-source grp5
 !
- neighbor fde4:8:07::cafe remote-as 65008
- neighbor fde4:8:07::cafe update-source grp8
+ neighbor fde4:8:a007::cafe remote-as 65008
+ neighbor fde4:8:a007::cafe update-source grp8
+ neighbor fde4:8:a007::cafe password NETWORK0708
 !
  address-family ipv6 unicast
 !
@@ -28,7 +32,7 @@ router bgp 65007
   neighbor fde4:7:deef:beef::4 activate
   neighbor fde4:7:deef:beef::a activate
   neighbor fde4::5:face activate
-  neighbor fde4:8:07::cafe activate
+  neighbor fde4:8:a007::cafe activate
   neighbor fde4:7:deef:beef::a route-reflector-client
  exit-address-family
 
