--- a/grp7_cfg/DJAF1/djaf1_bgp.conf
+++ b/grp7_cfg/DJAF1/djaf1_bgp.conf
@@ -6,12 +6,15 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::3 remote-as 65007
  neighbor fde4:7:deef:beef::3 update-source lo
+ neighbor fde4:7:deef:beef::3 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::4 remote-as 65007
  neighbor fde4:7:deef:beef::4 update-source lo
+ neighbor fde4:7:deef:beef::4 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::a remote-as 65007
  neighbor fde4:7:deef:beef::a update-source lo
+ neighbor fde4:7:deef:beef::a password ABCDEF12345
 !
  neighbor fde4:3::7:cafe remote-as 65003
  neighbor fde4:3::7:cafe update-source grp3
