--- a/grp7_cfg/SAMIR1/samir1_bgp.conf
+++ b/grp7_cfg/SAMIR1/samir1_bgp.conf
@@ -6,18 +6,23 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::1 remote-as 65007
  neighbor fde4:7:deef:beef::1 update-source lo
+ neighbor fde4:7:deef:beef::1 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::3 remote-as 65007
  neighbor fde4:7:deef:beef::3 update-source lo
+ neighbor fde4:7:deef:beef::3 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::4 remote-as 65007
  neighbor fde4:7:deef:beef::4 update-source lo
+ neighbor fde4:7:deef:beef::4 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::5 remote-as 65007
  neighbor fde4:7:deef:beef::5 update-source lo
+ neighbor fde4:7:deef:beef::5 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::6 remote-as 65007
  neighbor fde4:7:deef:beef::6 update-source lo
+ neighbor fde4:7:deef:beef::6 password ABCDEF12345
 !
  address-family ipv6 unicast
 !
