--- a/grp7_cfg/DJAF2/djaf2_bgp.conf
+++ b/grp7_cfg/DJAF2/djaf2_bgp.conf
@@ -6,9 +6,11 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::8 remote-as 65007
  neighbor fde4:7:deef:beef::8 update-source lo
+ neighbor fde4:7:deef:beef::8 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::9 remote-as 65007
  neighbor fde4:7:deef:beef::9 update-source lo
+ neighbor fde4:7:deef:beef::9 password ABCDEF12345
 !
  address-family ipv6 unicast
 !
