--- a/grp7_cfg/PIERROT1/pierrot1_bgp.conf
+++ b/grp7_cfg/PIERROT1/pierrot1_bgp.conf
@@ -6,12 +6,15 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::1 remote-as 65007
  neighbor fde4:7:deef:beef::1 update-source lo
+ neighbor fde4:7:deef:beef::1 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::2 remote-as 65007
  neighbor fde4:7:deef:beef::2 update-source lo
+ neighbor fde4:7:deef:beef::2 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::7 remote-as 65007
  neighbor fde4:7:deef:beef::7 update-source lo
+ neighbor fde4:7:deef:beef::7 password ABCDEF12345
 !
  address-family ipv6 unicast
 !
