--- a/grp7_cfg/PIERROT2/pierrot2_bgp.conf
+++ b/grp7_cfg/PIERROT2/pierrot2_bgp.conf
@@ -6,9 +6,11 @@ router bgp 65007
  no bgp default ipv4-unicast
  neighbor fde4:7:deef:beef::5 remote-as 65007
  neighbor fde4:7:deef:beef::5 update-source lo
+ neighbor fde4:7:deef:beef::5 password ABCDEF12345
 !
  neighbor fde4:7:deef:beef::6 remote-as 65007
  neighbor fde4:7:deef:beef::6 update-source lo
+ neighbor fde4:7:deef:beef::6 password ABCDEF12345
 !
  address-family ipv6 unicast
 !
