--- a/grp7_cfg/PIERROT1/pierrot1_bgp.conf
+++ b/grp7_cfg/PIERROT1/pierrot1_bgp.conf
@@ -16,11 +16,18 @@ router bgp 65007
  neighbor fde4:7:deef:beef::7 update-source lo
  neighbor fde4:7:deef:beef::7 password ABCDEF12345
 !
+ neighbor fde4:7::6:ffff remote-as 65006
+ neighbor fde4:7::6:ffff update-source grp6
+ neighbor fde4:7::6:ffff password NETWORK67
+!
  address-family ipv6 unicast
+network ::/0
 !
   neighbor fde4:7:deef:beef::1 activate
   neighbor fde4:7:deef:beef::2 activate
   neighbor fde4:7:deef:beef::7 activate
+  neighbor fde4:7::6:ffff activate
   neighbor fde4:7:deef:beef::7 route-reflector-client
+
  exit-address-family
 
