--- a/grp7_cfg/DJAF0/djaf0_bgp.conf
+++ b/grp7_cfg/DJAF0/djaf0_bgp.conf
@@ -34,5 +34,11 @@ router bgp 65007
   neighbor fde4::5:face activate
   neighbor fde4:8:a007::cafe activate
   neighbor fde4:7:deef:beef::a route-reflector-client
+  neighbor fde4::5:face prefix-list prov out
+  neighbor fde4:8:a007::cafe prefix-list prov out
  exit-address-family
+!
+ ip prefix-list prov permit fde4:6::/32
+ ip prefix-list prov permit fde4:7::/32
+
 
