--- a/grp7_cfg/DJAF1/djaf1_bgp.conf
+++ b/grp7_cfg/DJAF1/djaf1_bgp.conf
@@ -29,5 +29,8 @@ router bgp 65007
   neighbor fde4:7:deef:beef::a activate
   neighbor fde4:3::7:cafe activate
   neighbor fde4:7:deef:beef::a route-reflector-client
+  neighbor fde4:3::7:cafe prefix-list shared out
  exit-address-family
-
+!
+ ip prefix-list shared permit fde4:7::/32
+ ip prefix-list shared permit fde4:6::/32
