--- a/grp7_cfg/PIERROT0/pierrot0_bgp.conf
+++ b/grp7_cfg/PIERROT0/pierrot0_bgp.conf
@@ -42,5 +42,12 @@ router bgp 65007
   neighbor fde4::7:dead activate
   neighbor fde4::8:beef activate
   neighbor fde4:7:deef:beef::7 route-reflector-client
+  neighbor fde4::5:face prefix-list prov out
+  neighbor fde4::8:beef prefix-list prov out
+  neighbor fde4::7:dead prefix-list cust in
  exit-address-family
-
+!
+ ip prefix-list prov permit fde4:6::/32
+ ip prefix-list prov permit fde4:7::/32
+ ip prefix-list cust permit fde4:7:deef::/56
+ ip prefix-list cust permit fde4:6::/32
