--- a/grp7_cfg/PIERROT1/pierrot1_bgp.conf
+++ b/grp7_cfg/PIERROT1/pierrot1_bgp.conf
@@ -28,6 +28,8 @@ network ::/0
   neighbor fde4:7:deef:beef::7 activate
   neighbor fde4:7::6:ffff activate
   neighbor fde4:7:deef:beef::7 route-reflector-client
-
+  neighbor fde4:7::6:ffff prefix-list cust-as6 in
  exit-address-family
 
+ip prefix-list cust-as6 permit fde4:6::/32
+ip prefix-list cust-as6 permit fde4:deef:beef::/56
